test/files/neg/t8892.check
t8892.scala:2: error: type mismatch;
 found   : B
 required: C.this.B
    (which expands to)  String
class C[B](x: B) extends A { def f: B = x }
                                        ^
one error found
